add batch delete injection
